# luminis-mc

./: .gitignore  CMakeLists.txt  README.md  code_description.txt  metropolis_hastings.cpp  pyproject.toml  requirements.txt
apps/: Makefile.simple  main.cpp  metropolis_hastings_test.cpp
bindings/: python_module.cpp
build-app/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  luminis_app
include/luminis/: detector.hpp  material.hpp  math.hpp  photon.hpp  rng.hpp  simulation.hpp
include/luminis/core/: absortion.hpp  core.hpp  detector.hpp  laser.hpp  material.hpp  medium.hpp  photon.hpp  results.hpp  sample.hpp  simulation.hpp
include/luminis/log/: logger.hpp  progress.hpp
include/luminis/math/: rng.hpp  utils.hpp  vec.hpp
include/luminis/mie/: dmiev.h
include/luminis/sample/: meanfreepath.hpp  phase.hpp  table.hpp
old/: sim_cbs_RGD_density_multiple.py  sim_cbs_RGD_layers_multiple.py  sim_cbs_RGD_multiple.py  sim_cbs_test.py  sim_cbs_test_estimate.py  sim_polarization_RGD_multiple.py  sim_speckel_RGD_multiple.py
old/figures/: figs_cbs_RGD.py  figs_cbs_RGD_density copy.py  figs_cbs_RGD_density.py  figs_cbs_anysotropy.py  figs_cbs_layered.py  figs_cbs_layered_densities.py  figs_cbs_test.py  figs_mie_vs_RGD.py  figs_params_RGD.py  figs_sampling_accuracy.py
old/tests/absortion/: plot_absortion.ipynb
old/tests/cbs/: sim_cbs_RGD_multiple.py
old/tests/medium/: scattering_matrix.py
plots/: degeneracy_table.csv  figs_RGD_valid.py  figs_cbs_RGD.py  figs_cbs_RGD_density.py  figs_cbs_anysotropy.py  figs_cbs_layered.py  figs_cbs_layered_densities.py  figs_cbs_test.py  figs_mie_vs_RGD.py  figs_params_RGD.py  figs_sampling_accuracy.py  study_analog_vs_estimator.ipynb  study_mixture_layer.ipynb  study_mixture_layer_TWO_LAYERS__PLIN.ipynb  study_rgd_events_beam2500.ipynb  study_rgd_particles_beam2500.ipynb  tests.ipynb
plots/layers/: study_two_layers_2.ipynb  study_two_layers_2_rev.ipynb
plots/mixture/: study_mixture.ipynb
plots/rgd_particles/: particles.ipynb  polar_maps.ipynb  rgd_vs_mie.ipynb
plots/rgd_particles/figs_tesis/: cbs_inversion_lineal_co.csv
plots/theory/: theory.ipynb
plots/utils/: cbs.py  figures.py  loaders.py  styles.py
python/: python_module.cpp
python/luminis_mc/: __init__.py  _core.pyi  manager.py  records.py  schema.py  sweepmanager.py
python/src/luminis_mc/: __init__.py
python/tests/: absortion.py  detection.py  detector.py  histogram.py  laser.py  metropolis_hastings.py  phase_function.py  quick_test.py  scatter_direction.ipynb  scatter_direction.py  speckle.py  weight.py
results/: run_all.sh  sim_absortion_RGD_multiple.py  sim_cbs_RGD_density_multiple.py  sim_cbs_RGD_density_scale_multiple.py  sim_cbs_RGD_layers_multiple.py  sim_cbs_RGD_multiple.py  sim_cbs_test.py  sim_cbs_test_estimate.py  sim_memory_multiple-layered.py  sim_polarization_RGD_multiple.py  sim_speckel_RGD_multiple.py
results/estimator_vs_full/: figs.py  sim.py
results/estimator_vs_full_timed/: figs.py  sim.py
results/max_events_study/: figs.py  sim.py
results/single_events_study/: figs.py  sim.py
results/study_estimator_vs_analog/: plots.py  study_estimator_vs_analog.py  study_estimator_vs_analog__PLIN.py  study_estimator_vs_analog_mix.py
results/study_mixture_layer_1/: study_mixture_layer_MU_S_TOTAL_FIXED__PCIR.py  study_mixture_layer_MU_S_TOTAL_FIXED__PLIN.py
results/study_mixture_layer_2/: study_mixture_layer_TWO_LAYERS_REV__PLIN.py  study_mixture_layer_TWO_LAYERS__PCIR.py  study_mixture_layer_TWO_LAYERS__PLIN.py
results/study_rgd_events/: study_rgd_events__PCIR.py  study_rgd_events__PLIN.py
results/study_rgd_particles/: study_rgd_particles_TIMED__PCIR.py  study_rgd_particles_TIMED__PLIN.py  study_rgd_particles_ZOOM__PLIN.py  study_rgd_particles__PCIR.py  study_rgd_particles__PLIN.py
results/study_rgd_vs_mie/: study_mie_same_Ls__PCIR.py  study_mie_same_Ls__PLIN.py  study_rgd_vs_mie_rgd_limit_SAME_Ls__PLIN.py  study_rgd_vs_mie_rgd_limit__PLIN.py
results/test_hetero/: plots.py  sim_hetero.py  sim_homo.py
results/test_slices_grid/: figs.py  sim.py  tests.ipynb
results/utils/: loaders.py
results/validation_poly/: figs.py  mean_free_paths.py  sim.py
src/: absortion.cpp  cbs.cpp  core.cpp  detector.cpp  laser.cpp  meanfreepath.cpp  medium.cpp  phase.cpp  photon.cpp  results.cpp  rng.cpp  sample.cpp  simulation.cpp  table.cpp  utils.cpp  vec.cpp
src/mie/: MIEV0noP.f  dmiev.cpp
tests/: absortion.py  histogram.py  laser.py  metropolis_hastings.py  phase_function.py  plots_func.py  quick_test.py  rd_phase.py  scatter_direction.py  sim_abs.py  sim_abstime.py  sim_cbs.py  sim_cbs_new.py  sim_ring.py  sim_speckel.py  sim_spt.py  simple_sim.py  spatial.py  spatial_time_dependent.py  speckel.py  speckle.py  test_medium_stack.py
tests/absortion/: plot_absortion-layered.ipynb  plot_absortion.ipynb  sim_absortion-layered.py  sim_absortion.py
tests/cbs/: plot_cbs.ipynb  plot_cbs_RGD_multiple.ipynb  plot_cbs_circular-layered.ipynb  plot_cbs_linear.ipynb  sim_cbs.py  sim_cbs_RGD_multiple.py  sim_cbs_multiple-layered.py  sim_cbs_multiple.py
tests/medium/: medium.py  phase_function.py  scattering_matrix.py
tests/ring/: plot_ring.ipynb  sim_ring-multiple.py  sim_ring.py
tests/speckel/: plot_speckel.ipynb  sim_speckel.py  sim_speckel_multiple.py  study-sim_speckel_multiple.py
tools/: estimate_ram.py  rgd_valid.py
utils/: analysis.py  cbs_fit.py  loaders.py  styles.py  time.py
