[build-system]
requires = ["scikit-build-core>=0.8", "pybind11>=2.11"]
build-backend = "scikit_build_core.build"

[project]
name = "luminis-mc"
version = "0.1.0"
description = "Python bindings for the luminis-mc Monte Carlo C++ core"
readme = "README.md"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "mypy>=1.10",
    "ruff>=0.5",
    "black>=24.4",
    "pybind11-stubgen>=2.5",
]

[tool.scikit-build]
minimum-version = "build-system.requires"

# Optimized build by default: the per-photon transport kernel is hot.
# Release (-O3 -DNDEBUG) is already scikit-build-core's default, stated here
# explicitly. NATIVE (-march=native) + LTO are enabled because the library is
# compiled and run on the same machine (no portability needed).
cmake.build-type = "Release"

[tool.scikit-build.cmake.define]
LUMINIS_NATIVE = "ON"
LUMINIS_LTO = "ON"
